[package]
name = "argent"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = {version = "8", default-features = false }
jwks-client = {version = "0.2.0", git = "https://github.com/doooks/jwks-client.git", rev="92407e19981ae783b8c49281ba532822c1601866" }
rocket = {version = "0.5.0-rc.2", features = ["json", "uuid"]}
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_postgres"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", default-features = false, features = ["macros", "offline", "migrate", "uuid", "time"]}
uuid = { version = "<1.0.0", features = ["v4", "serde"]}
